@@ -1,9 +1,15 @@
 #! /bin/sh
 
-# Copyright (C) 2009-2013 Peter Breitenlohner <tex-live@tug.org>
+# Copyright (C) 2009-2014 Peter Breitenlohner <tex-live@tug.org>
 # You may freely use, modify and/or distribute this file.
 
 test -d tests || mkdir -p tests
+
+./pltotf -help || exit 1
+
+./pltotf -version || exit 1
+
+./pltotf -verbose $srcdir/tests/badpl && exit 1
 
 ./pltotf -verbose $srcdir/tests/cmr10 tests/xcmr10 || exit 1
 
